y.output
Terminals unused in grammar

   FOR
   LSB
   RSB


Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl_list decl
    3          | decl

    4 decl: var_decl
    5     | fun_decl

    6 var_decl: type_spec ID SEMICOLON
    7         | type_spec ID ASGN expr SEMICOLON

    8 type_spec: VOID
    9          | BOOL
   10          | INT
   11          | FLOAT
   12          | STRING

   13 $@1: %empty

   14 fun_decl: type_spec ID LB params RB $@1 function_compound_stmt
   15         | type_spec ID LB params RB SEMICOLON

   16 params: param_list
   17       | VOID

   18 param_list: param_list COMMA param
   19           | param

   20 param: type_spec ID
   21      | %empty

   22 $@2: %empty

   23 function_compound_stmt: LCB $@2 content_list RCB

   24 $@3: %empty

   25 compound_stmt: LCB $@3 content_list RCB

   26 content_list: content_list content
   27             | %empty

   28 content: var_decl
   29        | stmt

   30 stmt: expr SEMICOLON
   31     | compound_stmt
   32     | if_stmt
   33     | while_stmt
   34     | return_stmt
   35     | print_stmt SEMICOLON

   36 print_stmt: PRINT LB ID RB
   37           | PRINT LB STRING RB

   38 while_stmt: WHILE LB expr RB stmt

   39 if_stmt: IF LB expr RB stmt
   40        | IF LB expr RB stmt ELSE stmt

   41 return_stmt: RET SEMICOLON
   42            | RET expr SEMICOLON

   43 expr: ID ASGN expr
   44     | ID ADDASGN expr
   45     | ID SUBASGN expr
   46     | ID MULASGN expr
   47     | ID DIVASGN expr
   48     | ID MODASGN expr
   49     | expr OR expr
   50     | expr AND expr
   51     | expr EQ expr
   52     | expr NE expr
   53     | expr LTE expr
   54     | expr LT expr
   55     | expr MTE expr
   56     | expr MT expr
   57     | expr ADD expr
   58     | expr SUB expr
   59     | expr MUL expr
   60     | expr DIV expr
   61     | expr MOD expr
   62     | NOT expr
   63     | expr INC
   64     | expr DEC
   65     | LB expr RB
   66     | ID
   67     | ID LB args RB
   68     | TRUE
   69     | FALSE
   70     | I_CONST
   71     | F_CONST
   72     | SUB I_CONST
   73     | SUB F_CONST
   74     | STRING

   75 arg_list: arg_list COMMA expr
   76         | expr

   77 args: arg_list
   78     | %empty


Terminals, with rules where they appear

$end (0) 0
error (256)
PRINT (258) 36 37
IF (259) 39 40
ELSE (260) 40
FOR (261)
WHILE (262) 38
SEMICOLON (263) 6 7 15 30 35 41 42
ADD (264) 57
SUB (265) 58 72 73
MUL (266) 59
DIV (267) 60
MOD (268) 61
INC (269) 63
DEC (270) 64
MT (271) 56
LT (272) 54
MTE (273) 55
LTE (274) 53
EQ (275) 51
NE (276) 52
ASGN (277) 7 43
ADDASGN (278) 44
SUBASGN (279) 45
MULASGN (280) 46
DIVASGN (281) 47
MODASGN (282) 48
AND (283) 50
OR (284) 49
NOT (285) 62
LB (286) 14 15 36 37 38 39 40 65 67
RB (287) 14 15 36 37 38 39 40 65 67
LCB (288) 23 25
RCB (289) 23 25
LSB (290)
RSB (291)
COMMA (292) 18 75
TRUE (293) 68
FALSE (294) 69
RET (295) 41 42
I_CONST (296) 70 72
F_CONST (297) 71 73
STRING (298) 12 37 74
ID (299) 6 7 14 15 20 36 43 44 45 46 47 48 66 67
VOID (300) 8 17
INT (301) 10
FLOAT (302) 11
BOOL (303) 9
IFX (304)


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
decl_list (52)
    on left: 2 3, on right: 1 2
decl (53)
    on left: 4 5, on right: 2 3
var_decl (54)
    on left: 6 7, on right: 4 28
type_spec (55)
    on left: 8 9 10 11 12, on right: 6 7 13 14 19
fun_decl (56)
    on left: 14 15, on right: 5
$@1 (57)
    on left: 13, on right: 14
params (58)
    on left: 16 17, on right: 14 15
param_list (59)
    on left: 18 19, on right: 16 18
param (60)
    on left: 20 21, on right: 18 19
function_compound_stmt (61)
    on left: 23, on right: 14
$@2 (62)
    on left: 22, on right: 23
compound_stmt (63)
    on left: 25, on right: 31
$@3 (64)
    on left: 24, on right: 25
content_list (65)
    on left: 26 27, on right: 23 25 26
content (66)
    on left: 28 29, on right: 26
stmt (67)
    on left: 30 31 32 33 34 35, on right: 29 38 39 40
print_stmt (68)
    on left: 36 37, on right: 35
while_stmt (69)
    on left: 38, on right: 33
if_stmt (70)
    on left: 39 40, on right: 32
return_stmt (71)
    on left: 41 42, on right: 34
expr (72)
    on left: 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 63 64 65 66 67 68 69 70 71 72 73 74, on right: 7 30 38 39
    40 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63 64 65 75 76
arg_list (73)
    on left: 75 76, on right: 75 77
args (74)
    on left: 77 78, on right: 67


State 0

    0 $accept: . program $end

    STRING  shift, and go to state 1
    VOID    shift, and go to state 2
    INT     shift, and go to state 3
    FLOAT   shift, and go to state 4
    BOOL    shift, and go to state 5

    program    go to state 6
    decl_list  go to state 7
    decl       go to state 8
    var_decl   go to state 9
    type_spec  go to state 10
    fun_decl   go to state 11


State 1

   12 type_spec: STRING .

    $default  reduce using rule 12 (type_spec)


State 2

    8 type_spec: VOID .

    $default  reduce using rule 8 (type_spec)


State 3

   10 type_spec: INT .

    $default  reduce using rule 10 (type_spec)


State 4

   11 type_spec: FLOAT .

    $default  reduce using rule 11 (type_spec)


State 5

    9 type_spec: BOOL .

    $default  reduce using rule 9 (type_spec)


State 6

    0 $accept: program . $end

    $end  shift, and go to state 12


State 7

    1 program: decl_list .
    2 decl_list: decl_list . decl

    STRING  shift, and go to state 1
    VOID    shift, and go to state 2
    INT     shift, and go to state 3
    FLOAT   shift, and go to state 4
    BOOL    shift, and go to state 5

    $default  reduce using rule 1 (program)

    decl       go to state 13
    var_decl   go to state 9
    type_spec  go to state 10
    fun_decl   go to state 11


State 8

    3 decl_list: decl .

    $default  reduce using rule 3 (decl_list)


State 9

    4 decl: var_decl .

    $default  reduce using rule 4 (decl)


State 10

    6 var_decl: type_spec . ID SEMICOLON
    7         | type_spec . ID ASGN expr SEMICOLON
   14 fun_decl: type_spec . ID LB params RB $@1 function_compound_stmt
   15         | type_spec . ID LB params RB SEMICOLON

    ID  shift, and go to state 14


State 11

    5 decl: fun_decl .

    $default  reduce using rule 5 (decl)


State 12

    0 $accept: program $end .

    $default  accept


State 13

    2 decl_list: decl_list decl .

    $default  reduce using rule 2 (decl_list)


State 14

    6 var_decl: type_spec ID . SEMICOLON
    7         | type_spec ID . ASGN expr SEMICOLON
   14 fun_decl: type_spec ID . LB params RB $@1 function_compound_stmt
   15         | type_spec ID . LB params RB SEMICOLON

    SEMICOLON  shift, and go to state 15
    ASGN       shift, and go to state 16
    LB         shift, and go to state 17


State 15

    6 var_decl: type_spec ID SEMICOLON .

    $default  reduce using rule 6 (var_decl)


State 16

    7 var_decl: type_spec ID ASGN . expr SEMICOLON

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 27


State 17

   14 fun_decl: type_spec ID LB . params RB $@1 function_compound_stmt
   15         | type_spec ID LB . params RB SEMICOLON

    STRING  shift, and go to state 1
    VOID    shift, and go to state 28
    INT     shift, and go to state 3
    FLOAT   shift, and go to state 4
    BOOL    shift, and go to state 5

    $default  reduce using rule 20 (param)

    type_spec   go to state 29
    params      go to state 30
    param_list  go to state 31
    param       go to state 32


State 18

   72 expr: SUB . I_CONST
   73     | SUB . F_CONST

    I_CONST  shift, and go to state 33
    F_CONST  shift, and go to state 34


State 19

   62 expr: NOT . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 35


State 20

   65 expr: LB . expr RB

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 36


State 21

   68 expr: TRUE .

    $default  reduce using rule 68 (expr)


State 22

   69 expr: FALSE .

    $default  reduce using rule 69 (expr)


State 23

   70 expr: I_CONST .

    $default  reduce using rule 70 (expr)


State 24

   71 expr: F_CONST .

    $default  reduce using rule 71 (expr)


State 25

   74 expr: STRING .

    $default  reduce using rule 74 (expr)


State 26

   43 expr: ID . ASGN expr
   44     | ID . ADDASGN expr
   45     | ID . SUBASGN expr
   46     | ID . MULASGN expr
   47     | ID . DIVASGN expr
   48     | ID . MODASGN expr
   66     | ID .
   67     | ID . LB args RB

    ASGN     shift, and go to state 37
    ADDASGN  shift, and go to state 38
    SUBASGN  shift, and go to state 39
    MULASGN  shift, and go to state 40
    DIVASGN  shift, and go to state 41
    MODASGN  shift, and go to state 42
    LB       shift, and go to state 43

    $default  reduce using rule 66 (expr)


State 27

    7 var_decl: type_spec ID ASGN expr . SEMICOLON
   49 expr: expr . OR expr
   50     | expr . AND expr
   51     | expr . EQ expr
   52     | expr . NE expr
   53     | expr . LTE expr
   54     | expr . LT expr
   55     | expr . MTE expr
   56     | expr . MT expr
   57     | expr . ADD expr
   58     | expr . SUB expr
   59     | expr . MUL expr
   60     | expr . DIV expr
   61     | expr . MOD expr
   63     | expr . INC
   64     | expr . DEC

    SEMICOLON  shift, and go to state 44
    ADD        shift, and go to state 45
    SUB        shift, and go to state 46
    MUL        shift, and go to state 47
    DIV        shift, and go to state 48
    MOD        shift, and go to state 49
    INC        shift, and go to state 50
    DEC        shift, and go to state 51
    MT         shift, and go to state 52
    LT         shift, and go to state 53
    MTE        shift, and go to state 54
    LTE        shift, and go to state 55
    EQ         shift, and go to state 56
    NE         shift, and go to state 57
    AND        shift, and go to state 58
    OR         shift, and go to state 59


State 28

    8 type_spec: VOID .
   16 params: VOID .

    RB        reduce using rule 16 (params)
    $default  reduce using rule 8 (type_spec)


State 29

   19 param: type_spec . ID

    ID  shift, and go to state 60


State 30

   14 fun_decl: type_spec ID LB params . RB $@1 function_compound_stmt
   15         | type_spec ID LB params . RB SEMICOLON

    RB  shift, and go to state 61


State 31

   15 params: param_list .
   17 param_list: param_list . COMMA param

    COMMA  shift, and go to state 62

    $default  reduce using rule 15 (params)


State 32

   18 param_list: param .

    $default  reduce using rule 18 (param_list)


State 33

   72 expr: SUB I_CONST .

    $default  reduce using rule 72 (expr)


State 34

   73 expr: SUB F_CONST .

    $default  reduce using rule 73 (expr)


State 35

   49 expr: expr . OR expr
   50     | expr . AND expr
   51     | expr . EQ expr
   52     | expr . NE expr
   53     | expr . LTE expr
   54     | expr . LT expr
   55     | expr . MTE expr
   56     | expr . MT expr
   57     | expr . ADD expr
   58     | expr . SUB expr
   59     | expr . MUL expr
   60     | expr . DIV expr
   61     | expr . MOD expr
   62     | NOT expr .
   63     | expr . INC
   64     | expr . DEC

    INC  error (nonassociative)
    DEC  error (nonassociative)

    $default  reduce using rule 62 (expr)


State 36

   49 expr: expr . OR expr
   50     | expr . AND expr
   51     | expr . EQ expr
   52     | expr . NE expr
   53     | expr . LTE expr
   54     | expr . LT expr
   55     | expr . MTE expr
   56     | expr . MT expr
   57     | expr . ADD expr
   58     | expr . SUB expr
   59     | expr . MUL expr
   60     | expr . DIV expr
   61     | expr . MOD expr
   63     | expr . INC
   64     | expr . DEC
   65     | LB expr . RB

    ADD  shift, and go to state 45
    SUB  shift, and go to state 46
    MUL  shift, and go to state 47
    DIV  shift, and go to state 48
    MOD  shift, and go to state 49
    INC  shift, and go to state 50
    DEC  shift, and go to state 51
    MT   shift, and go to state 52
    LT   shift, and go to state 53
    MTE  shift, and go to state 54
    LTE  shift, and go to state 55
    EQ   shift, and go to state 56
    NE   shift, and go to state 57
    AND  shift, and go to state 58
    OR   shift, and go to state 59
    RB   shift, and go to state 63


State 37

   43 expr: ID ASGN . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 64


State 38

   44 expr: ID ADDASGN . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 65


State 39

   45 expr: ID SUBASGN . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 66


State 40

   46 expr: ID MULASGN . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 67


State 41

   47 expr: ID DIVASGN . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 68


State 42

   48 expr: ID MODASGN . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 69


State 43

   67 expr: ID LB . args RB

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    $default  reduce using rule 78 (args)

    expr      go to state 70
    arg_list  go to state 71
    args      go to state 72


State 44

    7 var_decl: type_spec ID ASGN expr SEMICOLON .

    $default  reduce using rule 7 (var_decl)


State 45

   57 expr: expr ADD . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 73


State 46

   58 expr: expr SUB . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 74


State 47

   59 expr: expr MUL . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 75


State 48

   60 expr: expr DIV . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 76


State 49

   61 expr: expr MOD . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 77


State 50

   63 expr: expr INC .

    $default  reduce using rule 63 (expr)


State 51

   64 expr: expr DEC .

    $default  reduce using rule 64 (expr)


State 52

   56 expr: expr MT . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 78


State 53

   54 expr: expr LT . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 79


State 54

   55 expr: expr MTE . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 80


State 55

   53 expr: expr LTE . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 81


State 56

   51 expr: expr EQ . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 82


State 57

   52 expr: expr NE . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 83


State 58

   50 expr: expr AND . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 84


State 59

   49 expr: expr OR . expr

    SUB      shift, and go to state 18
    NOT      shift, and go to state 19
    LB       shift, and go to state 20
    TRUE     shift, and go to state 21
    FALSE    shift, and go to state 22
    I_CONST  shift, and go to state 23
    F_CONST  shift, and go to state 24
    STRING   shift, and go to state 25
    ID       shift, and go to state 26

    expr  go to state 85


State 60

   19 param: type_spec ID .

    $default  reduce using rule 19 (param)


State 61

   14 fun_decl: type_spec ID LB params RB . $@1 function_compound_stmt
   15         | type_spec ID LB params RB . SEMICOLON

    SEMICOLON  shift, and go to state 86
    LCB        shift, and go to state 87

    function_compound_stmt  go to state 88


State 62
